--- a/client/app.css
+++ b/client/app.css
@@ -128,6 +128,17 @@ h2 {
   z-index: -1;
 }
 
+.stylish-title {
+            font-family: 'Arial', sans-serif;
+            font-size: 36px;
+            color: #0073e6;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            padding: 25px 0; /* Add padding to the top and bottom */
+            background-color: #f2f2f2; /* Background color for the title */
+        }
+
 body, html {
   height: 100%;
 }
